# C_minecraft_server

./: .gitignore  CMakeLists.txt  Makefile
src/: game.c  game.h  handlers.c  handlers.h  main.c  networking.c  networking.h
src/nbt/: nbt.c  nbt.h
src/net/: handlers.c  mcprotocol.c  mcprotocol.h  server.c  server.h
src/net/utils/: buffer.c  buffer.h  dynamicbuffer.c  dynamicbuffer.h  hashtable.c  hashtable.h
src/utils/: buffer.c  buffer.h  hashtable.c  hashtable.h
test/: main.c  test_buffer.c  test_buffer.h  test_hashtable.c  test_hashtable.h  test_mcprotocol.c  test_mcprotocol.h  test_nbt.c  test_nbt.h
